# GitHubAuthHelper

./: .gitignore  Dockerfile  Makefile  README.md  config.py  dev.Dockerfile  docker-compose.yml  example_usage.py  github_app_auth.py  jenkins_github_app_auth.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test-report.yml
docs/diagrams/: jenkins.puml
jenkins/: Jenkinsfile
src/github_auth_app/: __init__.py  app.py  config.py  jenkins_helper.py
tests/: conftest.py  test_github_app_auth.py  test_integration.py  test_jenkins_cli.py  test_jenkins_helpers.py
tests/fixtures/: mock_responses.py
