[project]
name = "github-auth-app"
version = "0.1.0"
description = "GitHub App authentication for Jenkins and other services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.2",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.12.4",
    "responses>=0.25.7",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

[project.scripts]
github-app-auth = "src.github_auth_app.jenkins_helper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_auth_app"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/github_auth_app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
